--- a/views/index.pug
+++ b/views/index.pug
@@ -23,6 +23,6 @@ block content
 
         .cell
           a(href='#')
-            img.thumbnail(src='https://placehold.it/550x550', alt='')
+            img.thumbnail(src='https://placehold.co/550x550', alt='')
             h5 My Site
 
