--- a/views/about.pug
+++ b/views/about.pug
@@ -11,47 +11,43 @@ block content
     .inner-wrapper.flex-row-wrap.two-col
       .about-intro-box.box
 
-        //- Replace with your name
-        h1 Name
+        h1 Chris Watnee
 
-        //- Feel free to personalize the title below
-        p Full Stack JavaScript Developer
+        p Full Stack Software Engineer
 
 
         .about-bio
 
-          //- Replace the boilerplate below with your best elevator pitch
-          p This is my elevator pitch. It is the elevator pitch to end all elevator pitches. Your mind is blown. Your mortal brain can scarcely process how well my prior experience maps to your open dev position. 
+          p As a full stack developer, I build scalable web applications using React, Node.js, and Express. My project-based experience ranges from responsive front end interfaces to secure, RESTful APIs. I prioritize clean, maintainable code to ensure high technical standards and long-term scalability. I am ready to leverage my technical skills to deliver high-quality, user-centric results.
 
 
       .skills-contact-box.box
         h6 Skills
 
-        //- Replace skills below with your own skills — at this point, you should be able to list as many as ten skills
         ul
-          li HTML
+          li HTML5
           li CSS
-          li JavaScript
-          li Git and GitHub
-          li VS Code
-          li Accessibility
-          li OOP
-          li Fetch and Public APIs
+          li Responsive Design
+          li Full Stack JavaScript (ES6+)
+          li React
           li Node.js
           li Express
-          li Pug
+          li RESTful API Development
+          li SQL
+          li Asynchronous Programming (AJAX/Fetch)
+          li Object-Oriented Programming (OOP)
+          li Version Control (Git/GitHub)
+          li Web Accessibility (A11y) standards
 
         h6 Contact Info
 
-        //- Replace with your own contact info - feel free to use fake information if you prefer
         ul
-          li 555-555-1234
-          li email@email.com
+          li 703-555-1234
+          li chris.watnee@email.com
 
-        //- Add URLs to the hrefs below to link to your social media accounts - feel free to use non-personal links to social media home pages if you prefer
-        a.btn-link(href='') LinkedIn
-        a.btn-link(href='') GitHub
-        a.btn-link(href='') Twitter
+        a.btn-link(href='https://www.linkedin.com/in/chriswatnee') LinkedIn
+        a.btn-link(href='https://github.com/chriswatnee') GitHub
+        a.btn-link(href='https://x.com/chriswatnee') X
 
     nav.nav
       a(href='/')
