--- a/views/layout.pug
+++ b/views/layout.pug
@@ -14,25 +14,21 @@ html(lang="en" dir="ltr")
       .sidebar-info-box
         br
         .thumbnail-box
-          img.thumbnail(src='https://placehold.co/550x350', alt='')
+          img.thumbnail(src='/static/images/profile-pic.jpg', alt='Chris Watnee')
         .dev-intro-box
 
-          //- Replace with your name
-          h5 Name
+          h5 Chris Watnee
 
-          //- Replace with description of who you are, what you do, and why you are so awesome
-          p Description
+          p I am a full stack software engineer based in the Washington, D.C. area, dedicated to building robust and scalable web applications. I specialize in the JavaScript ecosystem, with a deep passion for developing seamless end-to-end solutions using React, Node.js, and Express.
 
-          //- Add path from your '/about' route handler to the href below
-          a(href='') Learn More &rarr;
+          a(href='/about') Learn More &rarr;
 
     .wrapper
       .header
         .header-info-box
           button#menu-icon.menu-icon(type='button' data-toggle='my-info')
 
-          //- Replace with your name — this is for the mobile layout
-          span Name
+          span Chris Watnee
 
       block content
 
