--- a/views/project.pug
+++ b/views/project.pug
@@ -11,33 +11,24 @@ block content
     .inner-wrapper.flex-row-wrap.two-col
       .project-info-box.box
 
-        //- Use the info in your data file and the comments below to complete this template
+        h1= project.project_name
 
-        //- Use interpolation to dynamically add the project title
-        h1 Project Name
-
-        //- Use interpolation to dynamically add the project description
-        p Description
+        p= project.description
 
       .project-tech-links-box.box
         h6 Technologies
         ul
 
-          //- Use an `each` iterator and interpolation to dynamically replace the li tags below with the technologies listed for this project
-          li HTML
-          li CSS
-          li JavaScript
+          each technology in project.technologies
+            li= technology
 
-        //- Add the href values to the links below
-        a.btn-link(href='') Live Demo
-        a.btn-link(href='') GitHub Repo
+        a.btn-link(href=project.live_link, target='_blank') Live Demo
+        a.btn-link(href=project.github_link, target='_blank') GitHub Repo
 
     .project-img-box.box
 
-      //- Replace the URLs in the src attributes below with interpolated template literals to dynamically add your project images, and add descriptions to the alt attributes
-      img.project-img(src='https://placehold.co/1200x550', alt='')
-      img.project-img(src='https://placehold.co/1200x550', alt='')
-      img.project-img(src='https://placehold.co/1200x550', alt='')
+      each url in project.image_urls.slice(1)
+        img.project-img(src=url, alt=`Screen capture of ${project.project_name}`)
 
     nav.nav
       a(href='/')
